--- a/package.json
+++ b/package.json
@@ -2,14 +2,24 @@
   "name": "react-f2",
   "version": "1.0.0",
   "license": "MIT",
-  "author": "vvni <vvni980219@gmail.com>",
-  "main": "dist/index.js",
-  "module": "dist/esm/index.js",
+  "author": "0x219 <lzm0x219@gmail.com>",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js",
+      "default": "./dist/index.es.js"
+    }
+  },
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "prepare": "husky install",
-    "dev": "tsup --watch",
-    "build": "tsup --env.NODE_ENV production --minify"
+    "dev": "vite",
+    "build": "vite build"
   },
   "commitlint": {
     "extends": [
@@ -22,29 +32,34 @@
   },
   "dependencies": {
     "@antv/f2": "3.8.9",
-    "immer": "9.0.3",
     "react": "17.0.2",
-    "use-immer": "0.5.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "12.1.4",
     "@commitlint/config-conventional": "12.1.4",
     "@types/react": "17.0.11",
-    "@typescript-eslint/eslint-plugin": "4.26.1",
-    "@typescript-eslint/parser": "4.26.1",
-    "eslint": "7.28.0",
+    "@types/react-dom": "17.0.8",
+    "@typescript-eslint/eslint-plugin": "4.28.0",
+    "@typescript-eslint/parser": "4.28.0",
+    "@vitejs/plugin-react-refresh": "1.3.3",
+    "eslint": "7.29.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "6.0.0",
     "lint-staged": "11.0.0",
-    "prettier": "2.3.1",
+    "prettier": "2.3.2",
     "sort-package-json": "1.50.0",
-    "tsup": "4.11.2",
-    "typescript": "4.3.2"
+    "typescript": "4.3.4",
+    "vite": "2.3.8",
+    "vite-plugin-dts": "0.5.1",
+    "vite-react-jsx": "1.1.1",
+    "vite-tsconfig-paths": "3.3.13"
   },
   "peerDependencies": {
     "@antv/f2": ">=3.0.0",
-    "react": ">=16.8.0"
+    "react": ">=16.14.0",
+    "react-dom": ">=16.14.0"
   }
 }
