--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "jsx": "react"
+    "jsx": "react-jsx",
+    "rootDirs": ["src"]
   },
   "include": ["src"]
 }
